k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cockpit
  labels:
    app.kubernetes.io/part-of: cockpit
